collapse bug fix

--- a/sass/partials/_collapse.scss
+++ b/sass/partials/_collapse.scss
@@ -1,5 +1,5 @@
 .sp-collapse.collapse {
-  height: 200px;
+  height: 230px;
   overflow-y: hidden;
 }
 .collapse {
